# RK3588_NCNN

./: .gitignore  CMakeLists.txt  README.md  main.cpp  makefile
.cache/clangd/index/: Tensor.cpp.E46AD16AE97A8FAB.idx  Tensor.hpp.36B1DE8ECC101E1B.idx  json.cpp.7DAFA5CB2B052584.idx  json.hpp.0FFAD60F90C1DC8D.idx  main.cpp.073CB8950CFA69A1.idx  test_logger.cpp.F45061575C2FF2FB.idx  test_tensor.cpp.E6496F5A86F9BE5E.idx  zLogger.cpp.3665214C496E0AFE.idx  zLogger.hpp.78E72B253F7D4B85.idx
3dparty/: darwin_ffmpeg  darwin_ncnn  darwin_opencv
SDK/common/: CMakeLists.txt  Tensor.cpp  Tensor.hpp  zLogger.cpp  zLogger.hpp
SDK/infer/: infer.cpp  infer.hpp
cmake/: 3dparty.cmake  compiler.cmake
example/: test_logger.cpp  test_tensor.cpp
rk3588_bin/: RK3588_NCNN  test_tensor
